# dekigoto

./: .gitignore  LICENSE  README.md  arxiv_actordb_paper.tex  build.sh  dag.jsonnet  go.mod  go.sum  gosec-results-after-fix.json  story.jsonnet
.github/workflows/: deploy-docs.yml
certs/: client.crt  client.csr  client.key  server.crt  server.key  server.srl
client/dekigotojs/: README.md  package-lock.json
client/dekigotojs/src/: actor.test.ts  actor.ts
client/typescript/: package-lock.json  package.json  vitest.config.ts
client/typescript/src/: actor.ts
cmd/actordb/: main.go
config/: example.yaml
demo/nextjs-libsql/: .envrc  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
demo/nextjs-supabase/: README.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
docs/: .gitignore  astro.config.mjs  package-lock.json  package.json
impl/go/: go.mod  go.sum  gosec-results.json
impl/rust/: Cargo.toml
impl/rust/src/: config.rs  control.rs  eventstore.rs  lib.rs  main.rs  projector.rs  query.rs  security.rs
impl/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
internal/control/: plane.go
internal/eventstore/: eventstore.go  leveldb.go  libsql.go  rocksdb.go  sqlite.go  storage.go
internal/projector/: projector.go
internal/query/: interface.go
internal/security/: gateway.go
nextjs-supabase/: README.md  package-lock.json  package.json
pkg/config/: config.go
research/: actordb_paper.tex
test/: mvp_test.go
tools/migration/: main.go
(+98 files in other folders)
