[package]
name = "actordb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"

# Database connections
tokio-postgres = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
rocksdb = "0.21"

# Networking
tonic = "0.9"
tonic-build = "0.9"
hyper = "0.14"
tower = "0.4"

# Security
jsonwebtoken = "8.3"
rustls = "0.21"
rustls-pemfile = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Testing
[dev-dependencies]
tempfile = "3.0"
